[package]
name = "proxise_me"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = "3.7.0"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
tokio-retry = "0.3.0"
scraper = "0.19.0"
base64 = "0.22.0"
chrono = { version = "0.4", features = ["serde"] }
regex = "1.10.4"
futures = "0.3"
rusqlite = { version = "0.31.0", features = ["bundled"] }
async-recursion = "1.1.0"
#md5 = "0.7.0"
hashbrown = "0.15"